<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="url"
        android:summary="@string/site_url_summary"
        android:title="@string/site_url_label" />
    <EditTextPreference
        android:key="username"
        android:summary="@string/site_username_summary"
        android:title="@string/username" />
    <EditTextPreference
        android:key="password"
        android:password="true"
        android:summary="@string/site_password_summary"
        android:title="@string/password" />
    <EditTextPreference
        android:defaultValue="10"
        android:digits="0123456789"
        android:key="history_size"
        android:summary="@string/history_size_summary"
        android:title="@string/history_size" />

</PreferenceScreen>