<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:stretchColumns="1">
		<TableRow>
			<TextView android:text="@string/start_tag" />
			<EditText android:id="@+id/start_tag" android:singleLine="true" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/default_text" />
			<EditText android:id="@+id/default_text" android:singleLine="true" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/end_tag" />
			<EditText android:id="@+id/end_tag" android:singleLine="true" />
		</TableRow>
	</TableLayout>
	<Button android:id="@+id/save_tag" android:text="@string/save_tag"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>
