<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:padding="30dip"
	android:layout_gravity="center" android:saveEnabled="true">
	<TextView android:text="@string/app_name"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_gravity="center" android:layout_marginBottom="25dip"
		android:textSize="24.5sp" />
	<Spinner android:layout_height="wrap_content" android:id="@+id/sites"
		android:layout_width="fill_parent" android:clickable="false" />
	<Button android:id="@+id/new_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/new_entry"
		android:enabled="false" />
	<Button android:id="@+id/recent_button" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/recent_entries"
		android:enabled="false" />
	<View android:layout_width="10dip" android:layout_height="20dip" />
	<ProgressBar android:id="@+id/sites_loader_progress"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" />
</LinearLayout>
